<resources>
    <string name="app_name">BLESensorTag</string>

    <!--Notifications-->
    <string name="notif_text">Tap to cancel data acquisition&#8230;</string>

    <!--Database sensor labels-->
    <string name="label_barometer_sensor">Barometer</string>
    <string name="label_temperature_sensor">Temperature sensor</string>
    <string name="label_acc_sensor">Accelerometer</string>
    <string name="label_humidity_sensor">Humidity sensor</string>
    <string name="label_light_intensity_sensor">Light intensity sensor</string>
    <string name="label_stethoscope_sensor">Stethoscope</string>

    <!--Main menu labels-->
    <string name="label_connect_to_device">Connect to a device</string>
    <string name="label_show_all_ble_sensors_data">Show data</string>
    <string name="label_show_stethoscope">Show stethoscope</string>
    <string name="label_delete_database">Delete database</string>

    <!--Dialog delete database-->
    <string name="dialog_erase_title">Delete database</string>
    <string name="dialog_erase_db_msg">Are you sure you want to delete the database?</string>
    <string name="dialog_erase_positive_button">Erase</string>
    <string name="dialog_erase_negative_button">Abort</string>

    <!--Dialog select BLE device detection mode -->
    <string name="dialog_ble_detect_title">Select device</string>
    <string-array name="dialog_ble_detect_mode">
        <item>Stethoscope</item>
        <item>All sensors</item>
    </string-array>

    <!--BLE profile names-->
    <string name="profile_simple_key">Simple Key Profile</string>
    <string name="profile_barometric_pressure">Barometric Pressure Profile</string>
    <string name="profile_ir_temperature">IR Temperature Profile</string>
    <string name="profile_movement">Movement Profile</string>
    <string name="profile_humidity">Humidity Profile</string>
    <string name="profile_optical_sensor">Optical Profile</string>
    <string name="profile_gap_service">GAP Service Profile</string>
    <string name="profile_device_information">Device Information Service Profile</string>
    <string name="profile_connection_control">Connection Control Service Profile</string>
    <string name="profile_stethoscope">Stethoscope Profile</string>
    <string name="profile_heart_rate">Heart Rate Profile</string>

    <!--Toasts-->
    <string name="toast_ble_not_supported">BLE is not supported. The app is to be closed.</string>
    <string name="toast_ble_must_be_enabled">BLE must be enabled. The app is to be closed.</string>
    <string name="toast_ble_scanning_started">Scanning started.</string>
    <string name="toast_ble_scanning_stopped">Scanning stopped.</string>
    <string name="toast_ble_service_scan_device_not_passed">
        Internal error. The activity cannot be started.</string>
    <string name="toast_erase_db_successful">Database erased successfully!</string>
    <string name="toast_erase_db_failed">Database erasure failed!</string>
    <string name="toast_erase_db_abort">Database deletion aborted</string>
    <string name="toast_database_empty">Database is empty!</string>
    <string name="toast_invalid_ble_scan_data">What a Terrible Error! Cannot start this mode.</string>
    <string name="toast_export_csv_start_error">Error! Could not start exporting data&#8230;</string>
    <string name="toast_export_csv_could_not_read">Error! Could not read database&#8230;</string>
    <string name="toast_export_csv_could_not_save">Error! Could not save the file&#8230;</string>
    <string name="toast_export_csv_successful">Export successful!</string>
    <string name="toast_export_csv_unknown_error">Export failed! Unknown error&#8230;</string>
    <string name="toast_stethoscope_service_unavailable">Stethoscope service unavailable! Activity to be closed.</string>

    <!--Actions-->
    <string name="action_ble_scan_start_label">Scan</string>
    <string name="action_ble_scan_stop_label">Stop</string>
    <string name="action_ble_record_label">Record</string>
    <string name="action_csv_export_label">Export CSV</string>

    <!--Status messages-->
    <string name="status_connecting">Connecting&#8230;</string>
    <string name="status_connected">Connected!</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_ble_service_scanning">Service scan pending&#8230;</string>
    <string name="status_ble_services_found">Services found!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Button label-->
    <string name="label_button_left">Left button</string>
    <string name="label_button_right">Right button</string>
    <string name="label_reed_relay">Reed relay</string>

    <string name="label_barometric_pressure">Barometric pressure</string>
    <string name="label_barometric_pressure_unit">hPa</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_temperature_unit">Centigrade</string>

    <string name="label_ambient_temperature">Ambient temperature</string>
    <string name="label_object_temperature">Object temperature</string>

    <string name="label_accelerometer">Acc</string>
    <string name="label_magnetometer">Mag</string>
    <string name="label_gyroscope">Gyro</string>

    <string name="label_humidity">Humidity</string>
    <string name="label_humidity_unit" translatable="false">%</string>

    <string name="label_light_intensity">Light intensity</string>
    <string name="label_light_intensity_unit" translatable="false">LUX</string>

    <string name="label_gap_device_name">Device name:</string>
    <string name="label_system_id">System ID:</string>
    <string name="label_model_number">Model number:</string>
    <string name="label_serial_number">Serial number:</string>
    <string name="label_firmware_rev">Firmware revision:</string>
    <string name="label_hardware_rev">Hardware revision:</string>
    <string name="label_software_rev">Software revision:</string>
    <string name="label_manufacturer_name">Manufacturer:</string>

    <string name="label_connection_interval">Connection interval:</string>
    <string name="label_slave_latency">Slave latency:</string>
    <string name="label_supervision_timeout">Supervision timeout:</string>

    <string name="label_config_enable">Enable</string>
    <string name="label_config_notification">Notification</string>
    <string name="label_config_measurement">Measurements</string>
    <string name="label_config_period">Update period</string>

    <string name="label_no_configuration_provided">Hey, dude! No config, read only&#8230;</string>

    <string name="label_total_records">Total records</string>
    <string name="label_heart_rr">Heart R-R</string>

    <string name="label_stethoscope">Stethoscope</string>

    <string name="label_heart_rate">Heart Rate</string>

    <!--axis labels-->
    <string name="axis_acc_x" translatable="false">X [G]</string>
    <string name="axis_acc_y" translatable="false">Y [G]</string>
    <string name="axis_acc_z" translatable="false">X [G]</string>

    <string name="axis_gyr_x" translatable="false">X [°]</string>
    <string name="axis_gyr_y" translatable="false">Y [°]</string>
    <string name="axis_gyr_z" translatable="false">Z [°]</string>

    <string name="axis_mag_x" translatable="false">X [μT]</string>
    <string name="axis_mag_y" translatable="false">Y [μT]</string>
    <string name="axis_mag_z" translatable="false">Z [μT]</string>

    <!--Null fragment message-->
    <string name="null_fragment_message">An inevitable occurrence happened! ERROR!</string>

    <!--Permissions-->
    <string name="permission_external_storage_not_obtained">No external storage permission. App is to be closed.</string>
    <string name="permission_coarse_location_not_obtained">No coarse location permission for BLE. Activity to be closed.</string>
</resources>
