<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.projektorion.krzysztof.blesensortag.fragments.SensorTag.BarometricPressureFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_barometric_pressure"
        />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
        />

        <TextView
            android:id="@+id/barometric_pressure_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_barometric_pressure_unit"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_temperature"
        />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
        />

        <TextView
            android:id="@+id/temperature_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_temperature_unit"
        />

    </LinearLayout>

</LinearLayout>
