<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.projektorion.krzysztof.blesensortag.fragments.config.NotifyProfileConfigFragment"
    android:orientation="vertical">



    <Switch
        android:text="@string/label_config_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch_notification_state"
    />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/darker_gray"
    />

    <Switch
        android:text="@string/label_config_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch_measurement_state"
    />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/darker_gray"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/label_config_period"
        />

        <SeekBar
            android:id="@+id/seekbar_period_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="255"
            android:layout_weight="1"
        />
    </LinearLayout>


</LinearLayout>
